tests/security/taintedInputDirectly/output.txt
ERROR: TaintedData - input.hack:4:22 - Data from a URL query string found its way to a SQL query